# zk-location

./: .gitignore
zk-location/: Cargo.toml
zk-location/src/: combine.rs  config.rs  main.rs  merkle_path.rs  outside_agg.rs  outside_agg_reprove.rs  outside_leaf.rs  recursive.rs
