[package]
name = "zk-location"
version = "0.1.0"
edition = "2024"

[dependencies]
p3-field = { path = "../Plonky3/field" }
p3-baby-bear = { path = "../Plonky3/baby-bear" }
p3-air = { path = "../Plonky3/air" }
p3-uni-stark = { path = "../Plonky3/uni-stark" }
p3-matrix = { path = "../Plonky3/matrix" }
p3-commit = { path = "../Plonky3/commit" }
p3-challenger = { path = "../Plonky3/challenger" }
p3-dft = { path = "../Plonky3/dft" }
p3-fri = { path = "../Plonky3/fri" }
p3-poseidon2 = { path = "../Plonky3/poseidon2" }
p3-symmetric = { path = "../Plonky3/symmetric" }
rand = "0.8"
